--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <nav class="navbar">
             <div class="logo-container">
-                <img src="img/logo.png" alt="Logo Colegio Excelencia" class="logo">
+                <img src="./img/logo.png" alt="Logo Colegio Excelencia" class="logo">
                 <span class="logo-text">U. E. P René Baralt</span>
             </div>
             <ul class="nav-links">
